[tool.poetry]
name = "poetry-sort"
version = "1.2.0"
description = "Alphabetically sort your Poetry dependencies"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/celsiusnarhwal/poetry-sort"
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.2"
pydantic = "^1.10.2"

[tool.poetry.plugins."poetry.application.plugin"]
sort = "poetry_sort.plugin:PoetrySortPlugin"

[tool.sort.config]
auto = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
